@@ -190,7 +190,7 @@ ifelse($3, ,
         elif test -d "$withval"; then
             [$1]_LIBS="-L$withval -l${smr_lib}"
         else
-            AC_MSG_ERROR(argument must be boolean, file, or directory)
+            AC_MSG_ERROR([--with-$1-library argument must be yes/no, file or directory])
         fi
     fi
 ], [
@@ -223,7 +223,7 @@ AC_ARG_WITH([$1]-includes,
     if test -d "$withval"; then
         [$1]_CFLAGS="-I${withval}"
     else
-        AC_MSG_ERROR(argument must be a directory)
+        AC_MSG_ERROR([argument must be a directory])
     fi])
 
     dnl We need to put the given include directory into CPPFLAGS temporarily, but
@@ -913,7 +913,7 @@ AC_DEFUN([GNOME_INIT_HOOK],[
 	      else
 	        AC_MSG_RESULT(not found)
 	        if test x$2 = xfail; then
-	          AC_MSG_ERROR(Could not find the gnomeConf.sh file that is generated by gnome-libs install)
+	          AC_MSG_ERROR([Could not find the gnomeConf.sh file that is generated by gnome-libs install])
 	        fi
                 with_gnomelibs=no
 	      fi
