@@ -1,3 +1,8 @@
+2003-09-03  Mikhael Goikhman  <migo@homemail.com>
+
+	* acinclude.m4:
+	fixed error message for incorrect --with-SOMETHING-library argument
+
 2003-07-08  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/placement.c (PlaceWindow):
